Prevent opening the non-existent "Home" space in your web browser

I carved out an exception for "DM", but we need it for "Home" too.

BUG: 504842